# potos-iso-builder

./: .env  .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  README.md  Taskfile.yml  compose.yml  docker-compose.yml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: build-publish.yml  docker-publish.yml  lint.yml  tests.yml  yamllint.yml
config/: config.yml
container/: 99needrestart  Dockerfile  autoinstall-user-data.j2  build-iso  build-iso.py  change-keyboard-layout.j2  default-netplan.yml  finish.sh.j2  firstboot-gui.sh.j2  gnome-sudo  grub.cfg.j2  isolinux.cfg.j2
container/default/: access.pcx  splash.pcx
examples/best-practice/: config.yml
examples/minimal/: config.yml
input/: config.yml
potos-images/: README.md
potos-iso/: cleanup  create-iso
potos-iso/autoinstall/desktop-bios/: user-data
potos-iso/autoinstall/desktop-uefi/: user-data
potos-iso/bootmenu/grub/: grub.cfg
potos-iso/contrib/: change-keyboard-layout  finish.sh  firstboot-gui.sh
potos-iso/contrib/netplan/: 01-network-manager-all.yaml
potos-iso/contrib/scripts/: change-keyboard-layout  finish.sh  firstboot-gui.sh
potos-iso/contrib/sudoers.d/: 01_gnome-initial-setup
potos-iso/images/: access.pcx  splash.pcx
src/: build.py  config.py  isos.py
src/branding/pixmaps/: potos.css
src/firstboot/: requirements.in  requirements.txt
src/templates/: finish.sh.j2  firstboot.sh.j2  kickstart.cfg.j2  uki.sh.j2
src/templates/anaconda/: .buildstamp.j2
src/templates/anaconda/conf.d/: 90-potos.conf.j2
tests/: test_config.py  test_isos.py
tests/input/: config.yml
tests/scripts/: bootstrap.sh  enroll-mok.sh  teardown.sh
tests/shellcheck-fixtures/: firstboot.sh.galaxy.yml  firstboot.sh.yml  mapping.yml  uki.sh.quiet.yml  uki.sh.yml
tests/shellcheck-fixtures/snapshots/: firstboot.galaxy.sh  firstboot.sh  uki.quiet.sh  uki.sh
