[project]
name = "potos-iso-builder"
version = "1.0.0"
description = "Build customised Fedora installer ISOs with kickstart templating"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
build-iso = "build:main"


[dependency-groups]
dev = [
    "pykickstart>=3.50",
    "simpleline>=1.9",
    "dasbus>=1.7",
]
test = [
    "pytest>=8.0",
]
lint = [
    "ruff>=0.15.20",
    "yamllint>=1.37",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# Tests manipulate sys.path before importing the module under test.
"tests/*" = ["E402"]

[tool.ruff.format]
docstring-code-format = true
